feat: consume versioned OpenAPI engines (#41)
